# UrheiluseuraPro

./: .env.example  .gitignore  README.md  pyproject.toml  roadmap.md  sources.md
config/: sources.json
data/fixtures/: example_clubs.html  example_clubs.json  example_clubs_messy.html  example_clubs_messy.json  file_import_clubs.csv  file_import_clubs.json  file_import_invalid.json  file_import_mapped.csv  file_import_messy.csv  file_import_minimal.csv  robots_disallow.txt
db/: README.md  schema.postgresql.sql  schema.sql
db/queries/: examples.sql
db/seed/: reference.sql
docs/: ARKKITEHTUURI.md  architecture.md  data-model.md  database-schema.md  getting-started.md  schema-validation.md
src/urheiluseurapro/: __init__.py  __main__.py  cli.py  config.py  http_client.py  logging_setup.py
src/urheiluseurapro/collectors/: __init__.py  base.py  mock.py  registry.py  runner.py
src/urheiluseurapro/db/: __init__.py  repository.py  schema_loader.py
src/urheiluseurapro/deduplication/: __init__.py  matcher.py
src/urheiluseurapro/exporters/: __init__.py
src/urheiluseurapro/merge/: __init__.py  contact_persons.py  engine.py  priorities.py
src/urheiluseurapro/models/: __init__.py  (+10 more)
tests/: test_collectors.py  test_contact_person_merge.py  test_file_import_collector.py  test_html_collector.py  test_http_client.py  test_json_feed_collector.py  test_merge_engine.py  test_normalizers.py  test_repository.py  test_resolution_canonical.py  test_resolution_decision.py  test_resolution_keys.py  test_resolution_merge.py  test_source_config.py  test_sqlite_repository.py
(+46 files in other folders)
